--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Multiply</string>
+    <string name="TVnumberQuestionText">Number:</string>
+    <string name="TVnumberCorrectScore">0/0</string>
+    <string name="TVnumberLeftText">Num left: 0</string>
+    <string name="maxTitleText">Min</string>
+    <string name="resetGameText">Reset Game</string>
 </resources>
