--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="TVnumberLeftText">Num left: 0</string>
     <string name="maxTitleText">Min</string>
     <string name="resetGameText">Reset Game</string>
+    <string name="select_numbers">Select Numbers</string>
+    <string name="stats">Stats</string>
 </resources>
