--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="stats">Stats</string>
     <string name="_20x20">20x20</string>
     <string name="_50">50%</string>
+    <string name="preference_file_key">com.example.multiplicationtablequiz.1337.PREFERENCE_FILE_KEY</string>
+    <string name="activeNumbersKey">com.example.multiplicationtablequiz.activity.activeNumbersKey</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
